Fix font weight

--- a/css/main.scss
+++ b/css/main.scss
@@ -85,6 +85,7 @@ a {
   }
   .seira-vela {
     font-size: 30px;
+    font-weight: 600;
     position: absolute;
     bottom: 260px;
     left: 53px;
