--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import "font.scss";
 
 $font-color-light: #777777;
+$primary-color: #3cb0ff;
 
 html {
   height: 100%;
@@ -9,6 +10,22 @@ html {
 body {
   font-family: "mp", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100%;
+}
+
+a {
+  color: $primary-color;
+  font-weight: 600;
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+    color: lighten($primary-color, 10);
+  }
+  &:visited,
+  &:focus,
+  &:active {
+    text-decoration: none;
+    color: $primary-color;
+  }
 }
 
 .pattern {
@@ -21,13 +38,13 @@ body {
 .content {
   height: 100%;
   .header {
-    margin-top: 10%;
+    margin-top: 200px;
     img {
       width: 100px;
     }
   }
   .quote {
-    padding-top: 30%;
+    padding-top: 100px;
     font-size: 100px;
     font-weight: 300;
     p {
@@ -44,6 +61,29 @@ body {
     color: $font-color-light;
     .intro {
       margin-bottom: 100px;
+    }
+  }
+  .links {
+    padding-top: 40px;
+    a {
+      margin-right: 40px;
+      font-size: 27px;
+      font-weight: 800;
+    }
+    #git {
+      color: #333;
+    }
+    #dribbble {
+      color: #ea4c89;
+    }
+    #so {
+      color: #f48024;
+    }
+    #lki {
+      color: #0077b5;
+    }
+    #medium {
+      color: #00ab6c;
     }
   }
   .projects {
@@ -77,11 +117,20 @@ body {
         &.c {
           background-color: rgb(252, 237, 107);
         }
+        &.r {
+          background-color: #ffce4f;
+        }
         &.p {
           background-color: #4C90F5;
         }
         &.i {
-          background-color: #FF6262;
+          background-color: #ffcec7;
+        }
+        &.statements {
+          background-color: #8E8AFF;
+        }
+        &.e {
+          background-color: #d0c0b8;
         }
       }
       .details {
@@ -100,13 +149,32 @@ body {
   }
 }
 
-.contact {
-  width: 100%;
-  height: 300px;
-  border-top: 1px solid #EEEEEE;
+.more {
+  font-size: 30px;
+  text-align: center;
+  padding: 30px 0;
+  margin-bottom: 100px;
 }
 
-@media (min-width: 1439px) {
+.contact {
+  width: 100%;
+  padding: 100px 0;
+  border-top: 1px solid #EEEEEE;
+  .footer {
+    text-align: center;
+    img {
+      width: 80px;
+      border-radius: 50%;
+      margin-bottom: 10px;
+    }
+    .credit {
+      font-size: 20px;
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (min-width: 1600px) {
   .container {
     width: 1440px;
   }
