--- a/src/index.scss
+++ b/src/index.scss
@@ -106,8 +106,34 @@ a {
         display: flex;
         align-items: center;
         justify-content: center;
+        position: relative;
+        &:hover {
+          overflow: hidden;
+          img {
+            filter: blur(30px);
+          }
+          .hover {
+            opacity: 1;
+          }
+        }
+        .hover {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(#000, 0.70);
+          z-index: 10;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 22px;
+          border-radius: 8px;
+          font-weight: 700;
+          opacity: 0;
+          transition: opacity 0.2s ease;
+        }
         img {
           width: 100%;
+          transition: filter 0.3s ease;
         }
         &.m {
           background-color: #FF466E;
