--- a/css/main.scss
+++ b/css/main.scss
@@ -81,7 +81,7 @@ a {
       width: 54px;
       height: 63px;
       display: block;
-      background: url(http://www.cssdesignawards.com/badges/award-nominee-cssda-160-r.png) no-repeat;
+      background: url(https://www.cssdesignawards.com/badges/award-nominee-cssda-160-r.png) no-repeat;
       background-size: 54px;
     }
   }
