--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,12 @@ body {
   font-family: "mp", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100%;
 }
+#opl {
+  width: 100px;
+  position: absolute;
+  right: 0;
+  top: 100px;
+}
 
 #git {
   color: #333;
@@ -314,6 +320,9 @@ a {
 }
 
 @media (max-width: 767px) {
+  #opl {
+    width: 70px;
+  }
   .pattern {
     height: 80px;
   }
